This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

03-May-2002 (Lars Duening)  (3.3.452)
  - (simulate, interpret, func_spec, prolang.y) Added the new modifier
       'publish' to the catch() directive to have it call
       master::runtime_error() when an error occurs (suggested by
       Menaures).

03-May-2002 (Lars Duening)  (3.3.451)
  - (comm.c) When a pthread was cancelled, the flushing of the pending
       data happened after the socket was already shut down. Reason was that
       the threads were 'detached' upon creation, disabling the ability
       of the parent thread to wait for their completion (reported by Urv).
  - (object.c) The restore_svalue() routine now accepts a CR preceeding
       a LF as delimiter.

30-Apr-2002 (Lars Duening)  (3.3.450)
  - (ed.c) Only consecutive 'z'/'Z' commands do not re-print the current line;
       a 'z'/'Z' after a different command does (suggested by Elric).
  - (comm) When using PThreads, destructing an interactive object now
       flushes all remaining pending data to the socket (suggested by Urv).
       Additionally, the main thread waits properly for the writer thread to
       terminate.
  - (comm.c) When not using MCCP but PThreads, all outputs were doubled.

29-Apr-2002 (Lars Duening)  (3.3.449)
  - (sprintf.c) When printing arrays with '%O', the size was given
       one too small.
  - (mregex.c) PCRE: The string arguments passed to pcre_exec() were wrong, 
       making repeated replacements within on string dangerous (e.g. in ed
       '749,$s!arg!strength!gp') (reported by Elric).

24-Apr-2002 (Lars Duening)  (3.3.448)
  - (interpret.c) If during a call of the type 'funcall(lfun-closure)' the
       object holding the closure was destructed and the closure deallocated,
       int_call_lambda() still read the now-invalid lambda structure after
       the actual call. This could lead to an inconsistency in the