@@ -58,12 +58,15 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 452)
-(Parent-Version lpmud 3-3 451)
-(Version-Log "Added the 'publish' behaviour to catch().")
+(Project-Version lpmud 3-3 453)
+(Parent-Version lpmud 3-3 452)
+(Version-Log "Reactivated the strong type pragmas which I had commented out when debugging
+an older mudlib.
+Corrected a compilation problem in ptmalloc.
+Made restore_xxx() even more robust towards CRLFs.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 03 May 2003 21:42:02 -0600")
+(Checkin-Time "Mon, 05 May 2003 23:29:25 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -100,7 +103,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.65 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.515 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.516 644))
   (HISTORY (lpmud/f/49_HISTORY 1.322 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -117,7 +120,7 @@
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.6 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.15 644))
-  (src/settings/default (lpmud/c/23_default 1.13.1.5.1.40 744))
+  (src/settings/default (lpmud/c/23_default 1.13.1.5.1.41 744))
   (src/settings/native (lpmud/c/9_native 1.6 744))
   (src/settings/compat (lpmud/c/10_compat 1.7 744))
   (src/settings/alatia (lpmud/j/27_alatia 1.5 744))
@@ -189,9 +192,9 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.37 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.30 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.31 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.55 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.56 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.43 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
@@ -207,7 +210,7 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.4 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.30 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.31 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -249,7 +252,7 @@
   (src/pcre/COPYING (lpmud/r/31_COPYING 1.1 644))
   (src/pcre/AUTHORS (lpmud/r/32_AUTHORS 1.1 644))
   (src/ptmalloc.c (lpmud/c/b/46_ptmalloc.c 1.4 644))
-  (src/ptmalloc/thread-m.h (lpmud/c/b/47_thread-m.h 1.4 644) :no-keywords)
+  (src/ptmalloc/thread-m.h (lpmud/c/b/47_thread-m.h 1.5 644) :no-keywords)
   (src/ptmalloc/malloc.h (lpmud/c/b/48_malloc.h 1.1 644) :no-keywords)
   (src/ptmalloc/malloc.c (lpmud/c/b/49_malloc.c 1.3.1.4 644) :no-keywords)
   (src/ptmalloc/hooks.c (lpmud/c/b/50_hooks.c 1.1 644) :no-keywords)
@@ -268,7 +271,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.40 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.41 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -617,12 +620,6 @@
   (src/bugs/f-990324-1 (lpmud/m/34_f-990324-1 1.3 644) :no-keywords)
   (src/bugs/f-990324-3 (lpmud/m/37_f-990324-3 1.2 644) :no-keywords)
   (src/bugs/f-990324-4 (lpmud/m/38_f-990324-4 1.3 644) :no-keywords)
-  (src/bugs/f-990329 (lpmud/m/45_f-990329 1.2 644) :no-keywords)
-  (src/bugs/MudCompress/xtush-1.5 (lpmud/m/46_xtush-1.5 1.2 644) :no-keywords)
-  (src/bugs/MudCompress/protocol.html (lpmud/m/47_protocol.h 1.2 644) :no-keywords)
-  (src/bugs/MudCompress/mccpDecompress.h (lpmud/m/48_mccpDecomp 1.1 644) :no-keywords)
-  (src/bugs/MudCompress/mccpDecompress.c (lpmud/m/49_mccpDecomp 1.2 644) :no-keywords)
-  (src/bugs/MudCompress/AR-code.html (lpmud/m/50_AR-code.ht 1.2 644) :no-keywords)
   (src/bugs/f-990330-0 (lpmud/m/51_f-990330-0 1.1 644) :no-keywords)
   (src/bugs/f-990417-0 (lpmud/s/34_f-990417-0 1.1 644) :no-keywords)
   (src/bugs/f-990424-1 (lpmud/s/45_f-990424-1 1.1.1.1 644) :no-keywords)
@@ -839,6 +836,12 @@
   (src/done/f-990309-1 (lpmud/l/15_f-990309-1 1.1.1.2 644) :no-keywords)
   (src/done/f-990310-1 (lpmud/l/13_f-990310-1 1.4.1.1 644) :no-keywords)
   (src/done/f-990316-1 (lpmud/m/3_f-990316-1 1.1.1.1 644) :no-keywords)
+  (src/done/f-990329 (lpmud/m/45_f-990329 1.3 644) :no-keywords)
+  (src/done/MudCompress/xtush-1.5 (lpmud/m/46_xtush-1.5 1.2 644) :no-keywords)
+  (src/done/MudCompress/protocol.html (lpmud/m/47_protocol.h 1.2 644) :no-keywords)
+  (src/done/MudCompress/mccpDecompress.h (lpmud/m/48_mccpDecomp 1.1 644) :no-keywords)
+  (src/done/MudCompress/mccpDecompress.c (lpmud/m/49_mccpDecomp 1.2 644) :no-keywords)
+  (src/done/MudCompress/AR-code.html (lpmud/m/50_AR-code.ht 1.2 644) :no-keywords)
   (src/done/f-990417-9 (lpmud/l/23_f-990417-9 1.1 644) :no-keywords)
   (src/done/f-991020-0 (lpmud/e/17_f-991020-0 1.4 644) :no-keywords)
   (src/done/f-991104-1 (lpmud/e/36_f-991104-1 1.3 644) :no-keywords)
