@@ -2,7 +2,7 @@ Subject: Re: Mud Transfer Protocol (Future of Mudding?)
 From: "Erwin S. Andreasen" <erw@dde.dk>
 Date: 29 Mar 1999 13:04:08 GMT
 Type: Feature
-State: Unclassified
+State: Done - implemented in 3.3.447
 See also: bugs/MudCompress/... for the mentioned protocol and example code
 
 At least for normal MUD connections, compressing the output to about a quarter
